--- a/Paintroid/build.gradle
+++ b/Paintroid/build.gradle
@@ -28,6 +28,8 @@ android {
         }
 
         androidTest {
+            println("#### does file testexclusions.txt exist in parent of '.'? " + file('.').absolutePath + " " + file('../testexclusions.txt').exists())
+            println(fileTree("..").filter { it.isFile() }.files.path)
             if (file('../testexclusions.txt').exists()) {
                 println('### EXCLUDING: ' + file('../testexclusions.txt').readLines())
                 java.exclude file('../testexclusions.txt').readLines()
