Ensures that the includes work correctly.
By default the includes consist already of the pattern "**/*.java".
Calling java.include only appends to that existing includes.
As a result currently when an include file existed all tests were run.

For consistency changes both include/exclude to their set-variants
setIncludes/setExcludes.

--- a/Paintroid/build.gradle
+++ b/Paintroid/build.gradle
@@ -33,11 +33,11 @@ android {
             println("#### does file testexclusions.txt exist in parent of '.'? " + file('.').absolutePath + " " + exclusionFile.exists() + " " + inclusionFile.exists())
             if (exclusionFile.exists()) {
                 println('### EXCLUDING: ' + exclusionFile.readLines())
-                java.exclude exclusionFile.readLines()
+                java.setExcludes exclusionFile.readLines()
             } else if (inclusionFile.exists()) {
                 println("#### already includes: " + java.getIncludes())
                 println('### INCLUDING: ' + inclusionFile.readLines())
-                java.include inclusionFile.readLines()
+                java.setIncludes inclusionFile.readLines()
                 println("#### AFTER INCLUDING: " + java.getIncludes())
             } else {
                 println("### nothing to exclude")
