--- a/Paintroid/build.gradle
+++ b/Paintroid/build.gradle
@@ -123,15 +123,16 @@ dependencies {
 
 }
 
-tasks.whenTaskAdded { task ->
-    if(task.name.startsWith('assembleDebugAndroidTest')) {
-        verifyAnimationScalePermissionGranted.shouldRunAfter adbGrantAnimationScalePermission
+if (project.hasProperty('jenkins')) {
+    project.android.dexOptions.preDexLibraries = false
+} else {
+    tasks.whenTaskAdded { task ->
+        if(task.name.startsWith('assembleDebugAndroidTest')) {
+            verifyAnimationScalePermissionGranted.shouldRunAfter adbGrantAnimationScalePermission
 
-        task.dependsOn adbGrantAnimationScalePermission
-        task.dependsOn verifyAnimationScalePermissionGranted
+            task.dependsOn adbGrantAnimationScalePermission
+            task.dependsOn verifyAnimationScalePermissionGranted
+        }
     }
 }
 
-if (project.hasProperty('jenkins')) {
-    project.android.dexOptions.preDexLibraries = false
-}
