Disable the animations for paintroid.

--- a/Paintroid/build.gradle
+++ b/Paintroid/build.gradle
@@ -84,6 +84,10 @@ android {
         }
     }
 
+    testOptions {
+        animationsDisabled = true
+    }
+
     lintOptions {
         // specific ignores should be defined via lint.xml file, all general ignores should be added here
         lintConfig file('config/lint.xml')
