--- a/docker/Dockerfile.jenkins
+++ b/docker/Dockerfile.jenkins
@@ -79,3 +79,17 @@ RUN if [ ! -z "$ANDROID_NDK_URL" ]; then \
 # -----------------------
 #
 RUN if [ ! -z "$SDKMANAGER_PACKAGES" ]; then yes | $_SDKMANAGER $SDKMANAGER_PACKAGES; fi
+
+# Performance related settings for the JVM
+# - Perform garbage collection in serial to reduce memory overhead.
+#   This reduces the overall performance as all threads are blocked
+#   during garbage collection.
+# - Respect the cgroup settings for memory.
+#
+# Note: Usage of _JAVA_OPTIONS is in general discouraged.
+#       This is an internal flag that will be preferred over
+#       JAVA_TOOL_OPTIONS and the command line parameters.
+#       We still use it here to ensure that these settings
+#       are respect, no matter what is configured elsewhere.
+ENV _JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+#ENV _JAVA_OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseSerialGC -XX:+UseCGroupMemoryLimitForHeap"
