--- a/Paintroid/build.gradle
+++ b/Paintroid/build.gradle
@@ -77,6 +77,14 @@ android {
         versionName rootProject.ext.androidVersionName
     }
 
+    sourceSets {
+        androidTest {
+            if (file('../testexclusions.txt').exists()) {
+                java.exclude file('../testexclusions.txt').readLines()
+            }
+        }
+    }
+
     buildTypes {
         release {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
